--- a/.env
+++ b/.env
@@ -9,15 +9,14 @@ ACCESS_TOKEN_SECRET=jengsbdfvsvfbgfnyttyejrthsdfvbdrwjrngdbfvathy
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=dfghyjbdfdbgnytruktmhncbdhtrjytngdbfvsdfdbsgnfdhjyrthg
 REFRESH_TOKEN_EXPIRY=10d
-
 CLOUDINARY_API_SCRET = AbAN6xV17U498enJ7jgFOh-kqn0
 CLOUDINARY_API = 642941976787197
 CLOUDINARY_NAME = ddj8lphry
 
-# PASSWORD ='nelw pzjj qrot uqmu'
+PASSWORD ='nelw pzjj qrot uqmu'
 # PASSWORD =51a20d7c758abc
 
-# EMAIL = 'hackersuraj2018@gmail.com'
+EMAIL = 'hackersuraj2018@gmail.com'
 # USER = 26946f256ebb5e
 # EMAIL = hackersuraj2018@gmail.com
 # EMAIL = api
