--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
