penging leave application

--- a/.env
+++ b/.env
@@ -32,3 +32,6 @@ API_TEST = 6db4acc92e69403fa974b9166e603501
 # geolocation api
 
 GEO_API = e472191d0faa4ebaa0d420f372d53dcb
+
+HOLIDAYS_API_KEY= orX2nhQn3T1oLEOUD1ejuB9SFNGAitSk
+
