--- a/.env
+++ b/.env
@@ -33,5 +33,8 @@ API_TEST = 6db4acc92e69403fa974b9166e603501
 
 GEO_API = e472191d0faa4ebaa0d420f372d53dcb
 
+#ipinfo location 
+IP_INFO_API = 61d57c9678fb85
+
 HOLIDAYS_API_KEY= orX2nhQn3T1oLEOUD1ejuB9SFNGAitSk
 
