--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-ipinfo": "^3.5.1",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.0",
+    "randomstring": "^1.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
